--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
         <link rel="stylesheet" href="style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link href="img/OFICIAL.png" rel="shortcut icon" />
-        <title>E-books - Mãos que Voam</title>
+        <title> Mãos que Voam</title>
     </head>
     
     <body data-bs-spy="scroll" data-bs-target="#navbar-example">
 
         <div class="bloco">
             <div class="logo">
-                <img src="img/branner.png">
+                <img src="img/branner1.png">
+                <br>MÃOS QUE VOAM
             </div>
         </div>
         <div id="main">
