--- a/index.html
+++ b/index.html
@@ -18,47 +18,44 @@
                 <br>MÃOS QUE VOAM
             </div>
         </div>
+
+        <div class="menu">
+            <input type="checkbox" id="check">
+            <label for="check"></label>
+            <span>
+                <b>></b>
+                <div id="navbar-example" class="list-group">
+                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-1">Teste 1</a>
+                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-2">Teste 2</a>
+                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-3">Teste 3</a>
+                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-4">Teste 4</a>
+                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-5">Teste 5</a>
+                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-6">Teste 6</a>
+                </div>
+            </span>
+        </div>
+
         <div id="main">
-            <nav id="navbar-example" class="navbar navbar-light bg-light px-3">
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading1">Teste 1</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading2">Teste 2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading3">Teste 3</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading4">Teste 4</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading5">Teste 5</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#scrollspyHeading6">Teste 6</a>
-                    </li>
-                </ul>
-            </nav>
 
             <div class="textScroll" data-bs-spy="scroll" data-bs-target="#navbar-example" data-bs-offset="200" class="scrollspy-example" tabindex="0">
-                <h4 id="scrollspyHeading1">Teste 1</h4>
+                <h4 id="list-item-1">Teste 1</h4>
                 <p>Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.
                     Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.</p>
-                <h4 id="scrollspyHeading2">Teste 2</h4>
+                    <h4>Teste video</h4>
+                    <iframe width="360" height="190" src="https://www.youtube.com/embed/uwY9IDJJP-o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <h4 id="list-item-2">Teste 2</h4>
                 <p>Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.
                     Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.</p>
-                <h4 id="scrollspyHeading3">Teste 3</h4>
+                <h4 id="list-item-3">Teste 3</h4>
                 <p>Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.
                     Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.</p>
-                <h4 id="scrollspyHeading4">Teste 4</h4>
+                <h4 id="list-item-4">Teste 4</h4>
                 <p>Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.
                     Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.</p>
-                <h4 id="scrollspyHeading5">Teste 5</h4>
+                <h4 id="list-item-5">Teste 5</h4>
                 <p>Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.
                     Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.</p>
-                <h4 id="scrollspyHeading6">Teste 6</h4>
+                <h4 id="list-item-6">Teste 6</h4>
                 <p>Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.
                     Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.</p>
             </div>
