--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <span>
                 <b>></b>
                 <div id="navbar-example" class="list-group">
-                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-1">Teste 1</a>
-                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-2">Teste 2</a>
-                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-3">Teste 3</a>
-                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-4">Teste 4</a>
-                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-5">Teste 5</a>
-                    <a class=".list-group-item-#{$state} &.list-group-item-action" href="#list-item-6">Teste 6</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-1">Teste 1</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-2">Teste 2</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-3">Teste 3</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-4">Teste 4</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-5">Teste 5</a>
+                    <a class="list-group-item list-group-item-action" href="#list-item-6">Teste 6</a>
                 </div>
             </span>
         </div>
@@ -42,7 +42,7 @@
                 <p>Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.
                     Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.</p>
                     <h4>Teste video</h4>
-                    <iframe width="360" height="190" src="https://www.youtube.com/embed/uwY9IDJJP-o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="360" height="190" src="https://www.youtube.com/embed/YivFEBAZ1tE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h4 id="list-item-2">Teste 2</h4>
                 <p>Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.
                     Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.</p>
@@ -61,9 +61,7 @@
             </div>
         </div>
 
-        <div class="topo">
-            ^
-        </div>
+        <a class="topo" href="#list-item-1"><button>&#9650;</button></a>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
