--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
     </head>
     
     <body>
+        <div class="logo">
+            <img class="img" src="img/branner1.png">
+            <h1> MÃOS QUE VOAM</h1>
+        </div>
         <div id="conteudo">
-            <div class="fita">
-                <img src="img/fita.png">
-            </div>
-            <div class="logo">
-                <img class="img" src="img/branner1.png">
-                <h1> | MÃOS QUE VOAM</h1>
-            </div>
             <div class="bloco">
                 <div class="text">
                     <p>Este é um conteúdo de espaço reservado para a página do scrollspy. Observe que, à medida que você rola a página, o link de navegação apropriado é realçado. É repetido em todo o exemplo do componente. Continuamos adicionando mais alguns exemplos de cópia aqui para enfatizar a rolagem e o realce.
